--- a/src/index.css
+++ b/src/index.css
@@ -13,3 +13,13 @@
     background-color: #000;
     border: 1px solid #fff;
 }
+
+.snake-food {
+    position: absolute;
+    width: 2%;
+    height: 2%;
+    background: red;
+    border: 1px solid #fff;
+    z-index: 1px;
+    ;
+}
